--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@cloudflare/ai": "^1.0.0",
-    "@modelcontextprotocol/server": "^1.0.0",
+    "@modelcontextprotocol/sdk": "^1.12.0",
+    "agents": "^0.0.93",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
     "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "eslint": "^9.0.0",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0",
     "wrangler": "^3.78.12"
